# ckpttn-cpp

./: .gitpod.Dockerfile  .gitpod.yml  AGENTS.md  CMakeLists.txt  FMBiConstrMgr_8hpp.html  FMBiConstrMgr_8hpp__dep__incl.map  FMBiConstrMgr_8hpp__dep__incl.md5  FMBiConstrMgr_8hpp__incl.map  FMBiConstrMgr_8hpp__incl.md5  FMBiConstrMgr_8hpp_source.html  FMBiGainCalc_8hpp.html  FMBiGainCalc_8hpp__dep__incl.map  FMBiGainCalc_8hpp__dep__incl.md5  FMBiGainCalc_8hpp__incl.map  FMBiGainCalc_8hpp__incl.md5  FMBiGainCalc_8hpp_source.html  FMBiGainMgr_8hpp.html  FMBiGainMgr_8hpp__incl.map  FMBiGainMgr_8hpp__incl.md5  FMBiGainMgr_8hpp_source.html  FMConstrMgr_8hpp.html  FMConstrMgr_8hpp__dep__incl.map  FMConstrMgr_8hpp__dep__incl.md5  FMConstrMgr_8hpp__incl.map  FMConstrMgr_8hpp__incl.md5  FMConstrMgr_8hpp_source.html  FMGainMgr_8hpp.html  FMGainMgr_8hpp__dep__incl.map  FMGainMgr_8hpp__dep__incl.md5  FMGainMgr_8hpp__incl.map  FMGainMgr_8hpp__incl.md5  FMGainMgr_8hpp_source.html  FMKWayConstrMgr_8hpp.html  FMKWayConstrMgr_8hpp__incl.map  FMKWayConstrMgr_8hpp__incl.md5  FMKWayConstrMgr_8hpp_source.html  FMKWayGainCalc_8hpp.html  FMKWayGainCalc_8hpp__dep__incl.map  FMKWayGainCalc_8hpp__dep__incl.md5  FMKWayGainCalc_8hpp__incl.map  (+429 more)
.github/workflows/: benchmark.tml  benchmark.yml  documentation.yaml  install.yml  macos.old  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
.sisyphus/: MLMidLvLKWay-slides.md
.trunk/: trunk.yaml
ai_gen/: bpqueue_ai.cpp  dllist_ai.cpp  lict_ai.cpp  min_cover_ai.cpp  min_cover_ai2.cpp  min_hash_ai.cpp  min_hash_ai2.cpp  set_partition_ai.cpp
bench/: CMakeLists.txt  FMBi_2pin_nets.cpp  FMKWay_2pin_nets.cpp
cast/: lubuntu20-04-g++-11.cast  lubuntu20-04-xmake-2.8.5.cast  ubuntu20-04-g++-11.cast
documentation/: CMakeLists.txt  Doxyfile  conf.py
hmetis/: test_balance_hmetis.hgr
hmetis/hmetis-1.5.3-WIN32/: s13207P.hgr.part.2  test_balance_hmetis.hgr
include/: transranger_view.hpp  transrangers.hpp  transrangers_ext.hpp
include/ckpttn/: FMBiConstrMgr.hpp  FMBiGainCalc.hpp  FMBiGainMgr.hpp  FMConstrMgr.hpp  FMGainMgr.hpp  FMKWayConstrMgr.hpp  FMKWayGainCalc.hpp  FMKWayGainMgr.hpp  FMPartMgr.hpp  FMPmrConfig.hpp  HierNetlist.hpp  MLMidLvlKWayPartMgr.hpp  MLMidLvlPartMgr.hpp  MLPartMgr.hpp  MidLvlKWayPartMgr.hpp  MidLvlPartMgr.hpp  NNPartMgr.hpp  PartMgrBase.hpp  array_like.hpp  bpqueue.hpp  dllink.hpp  dllist.hpp  greeter.h  logger.hpp  moveinfo.hpp  netlist.hpp  netlist_algo.hpp  readwrite.hpp  robin.hpp  spdlog_example.hpp
middle/: Makefile  hamcycle.cpp  hamcycle.hpp  main.cpp  main_cli.cpp  tree.cpp  tree.hpp  vertex.cpp  vertex.hpp
middle_orig/: hamcycle.hpp  main.cpp  tree.hpp  vertex.cpp  vertex.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  enums_0.js  (+65 more)
slides/: MLMidLvLKWay-slides.md
source/: FMBiGainCalc.cpp  FMBiGainMgr2.cpp  FMConstrMgr.cpp  FMGainMgr.cpp  FMKWayConstrMgr.cpp  FMKWayGainCalc.cpp  FMKWayGainMgr.cpp  FMPartMgr.cpp  HierNetlist.cpp  MLMidLvlKWayPartMgr.cpp  MLMidLvlPartMgr.cpp  MLPartMgr.cpp  MidLvlKWayPartMgr.cpp  MidLvlPartMgr.cpp  NNPartMgr.cpp  PartMgrBase.cpp  bpqueue.cpp  greeter.cpp  greeter.tpp  logger.cpp  min_cover.cpp  netlist.cpp  readwrite.cpp  spdlog_example.cpp
source/midlevel/: hamcycle.cpp  tree.cpp  vertex.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  greeter.old  test_FMBiGainMgr.cpp  test_common.hpp  (+30 more)
test_installed/: CMakeLists.txt
testcases/: drawf.json  dwarf1.are  dwarf1.json  dwarf1.netD  fix.json  ibm01.are  ibm01.net  ibm02.are  ibm02.net  ibm02.netD  ibm03.are  ibm03.net  ibm03.netD  ibm18.are  p1.json  p1.net  test.hgr  test_balance.hgr  test_balance2.hgr  yosys_and2.json
yosys_testcases/: sphere3hopf_netlist_simple.json  sphere_netlist.json  validate_yosys_json.py  yosys_schema.json
(+3 files in other folders)
